feat: complete insurance lifecycle backend complete changes done